Add `disable_tuya_default_response` option

--- a/zigbee2mqtt-edge/config.json
+++ b/zigbee2mqtt-edge/config.json
@@ -47,6 +47,7 @@
   },
   "schema": {
     "zigbee_herdsman_debug": "bool?",
+    "disable_tuya_default_response": "bool?",
     "data_path": "str",
     "socat": {
       "enabled": "bool?",
